override ligatures defined in nextra styles
for code.nextra-code selector which has higher specificity

--- a/apps/docs/components/layout/Layout.css
+++ b/apps/docs/components/layout/Layout.css
@@ -15,7 +15,7 @@
   samp,
   pre {
     font-family: var(--ax-fontFamily-mono);
-    font-feature-settings: normal;
+    font-feature-settings: normal !important;
     font-variant-ligatures: none;
   }
 
