--- a/apps/docs/components/layout/Layout.css
+++ b/apps/docs/components/layout/Layout.css
@@ -4,6 +4,7 @@
   html {
     font-family: var(--ax-fontFamily-sans);
     font-feature-settings: "cv02", "cv03", "cv04";
+    scroll-behavior: smooth;
   }
 
   body {
