fix counter for steps

--- a/apps/docs/components/mdx/HeadingLink.module.css
+++ b/apps/docs/components/mdx/HeadingLink.module.css
@@ -1,6 +1,14 @@
 .hidden {
   opacity: 0;
   pointer-events: none;
+
+  h6 {
+    counter-increment: none;
+
+    &::before {
+      content: "";
+    }
+  }
 }
 
 .group {
