set default tabler icon size to 16px
only if height has not been changed from default 24px

--- a/apps/docs/components/layout/Layout.css
+++ b/apps/docs/components/layout/Layout.css
@@ -194,9 +194,12 @@
   }
 
   .tabler-icon {
-    height: 16px;
     stroke-width: 1.5;
-    width: auto;
+
+    &[height="24"] {
+      height: 16px;
+      width: auto;
+    }
   }
 
   .hover\:_underline:hover {
